--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="red">#F40000</color>
     <color name="gable_green">#172D34</color>
     <color name="calico">#E2BD98</color>
+    <color name="calico_95">#80E2BD98</color>
     <color name="transparent">#00000000</color>
     <color name="gable_green_95">#95172D34</color>
     <color name="darkslategray">#232932</color>
