--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -61,7 +61,7 @@
             android:indeterminateTint="@color/calico"
             android:indeterminateOnly="true"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ivProfile" />
