--- a/app/src/main/res/layout/signup_fragment.xml
+++ b/app/src/main/res/layout/signup_fragment.xml
@@ -197,14 +197,14 @@
 
                     <Button
                         android:id="@+id/btnSignup"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:backgroundTint="@color/gable_green"
                         android:text="@string/sign_up"
                         android:textAllCaps="false"
                         android:textColor="@color/calico"
-                        android:textSize="22sp"
+                        android:textSize="18sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/confirmPasswordInput" />
