--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">@color/gable_green</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="bottomSheetTheme" parent="ThemeOverlay.MaterialComponents.BottomSheetDialog">
+        <item name="android:backgroundTint">@color/transparent</item>
+    </style>
 </resources>
