--- a/app/src/main/res/layout/memory_detail_fragment.xml
+++ b/app/src/main/res/layout/memory_detail_fragment.xml
@@ -91,7 +91,8 @@
         android:src="@drawable/ic_download"
         app:layout_constraintEnd_toStartOf="@id/ibDeleteMemory"
         app:layout_constraintStart_toEndOf="@id/ibSendMemory"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:tint="@color/calico" />
 
     <ImageButton
         android:id="@+id/ibDeleteMemory"
